--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "file-saver": "^2.0.5",
     "jquery": "^3.6.0",
     "jszip": "^3.6.0",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "xss": "^1.0.8"
   }
 }
